made more specific

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<div>
 		<ul>
 			<li>Jake Gyllenhaal</li>
-			<li>Brad Bale</li>
+			<li>Brad Pitt</li>
 			<li>Leonardo Decapro</li>
 			
 		</ul>
